--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,33 @@
 .numeromazzo{
--fx-font: 100px Tahoma; 
--fx-fill: linear-gradient(from 0% 0% to 100% 200%, repeat, aqua 0%, red 50%); 
--fx-stroke: black; 
--fx-stroke-width: 1;
+	-fx-font: 100px Tahoma; 
+	-fx-fill: red; 
+	-fx-stroke: white; 
+	-fx-stroke-width: 2;
 }
+
+.punteggiog1{
+	-fx-font: 30px Tahoma;
+	-fx-fill: #ffcc00;
+}
+
+.punteggiog2{
+	-fx-font: 30px Tahoma;
+	-fx-fill: #ff751a;
+	
+}
+
+.turno {
+	-fx-font: 30px Tahoma;
+	-fx-fill: #1a1aff ;
+}
+.nomeG1{
+	-fx-font: 30px Tahoma;
+	-fx-fill: #ffcc00;
+}
+
+.nomeG2{
+	-fx-font: 30px Tahoma;
+	-fx-fill: #ff751a;
+}
+
+
